# merk

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  history.txt  otel-collector-config.yml  prometheus.yml  rustfmt.toml
.claude/agents/: merk.agent.md
.githooks/: pre-commit
.github/workflows/: ci.yml
benches/: query_layer_bench.rs
docs/: crawler_rekhta_plan.md  dummy_data.surql  schema_design.md
docs/schema/: 01_entities.md  02_events_decisions.md  03_erd.md  04_rest_api.md  05_graphql.md  06_http_examples.md  07_graphql_examples.md
examples/graphql/: admin.graphql  admin.variables.json  books.graphql  books.variables.json  chapters.graphql  chapters.variables.json  reader.graphql  reader.variables.json  subscriptions.graphql  subscriptions.variables.json  users.graphql  users.variables.json
grafana/dashboards/: graphql.json  merk.json
merk-migrations/: Cargo.toml  README.md
merk-migrations/migrations/: 0001_initial_schema.down.surql  0001_initial_schema.up.surql  0002_rbac_graphs.down.surql  0002_rbac_graphs.up.surql  0003_book_platform.down.surql  0003_book_platform.up.surql  0004_user_extensions.down.surql  0004_user_extensions.up.surql
merk-migrations/src/: lib.rs
src/: aide.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  server.rs  state.rs
src/api/: metrics.rs  mod.rs  spa.rs
src/api/graphql/: admin.rs  admin_crawl.rs  books.rs  chapters.rs  collections.rs  comments.rs  highlights.rs  known_operations.txt  logging.rs  metrics.rs  mod.rs  observability.rs  resolver_metrics.rs  reviews.rs  subscription_metrics.rs  subscriptions.rs  translations.rs  users.rs
src/api/middleware/: metrics.rs  mod.rs
src/api/openapi/: mod.rs
src/api/rest/: health.rs  mod.rs  users.rs
src/api/v1/: books.rs  chapters.rs  collections.rs  comments.rs  health.rs  highlights.rs  me.rs  mod.rs  reviews.rs  translations.rs  users.rs
src/api/v1/admin/: mod.rs  page_preview.rs  uploads.rs
src/db/: book_repo.rs  bookmark_repo.rs  chapter_repo.rs  collection_repo.rs  comment_repo.rs  highlight_repo.rs  mod.rs  profile_repo.rs  rbac_repo.rs  refresh_token_repo.rs  review_repo.rs  translation_repo.rs  user_repo.rs
src/db/admin/: ai.rs  covers.rs  crawl.rs  drafts.rs  jobs.rs  mod.rs  publish.rs
src/services/: auth.rs  event_bus.rs  mailer.rs  mod.rs  pipeline.rs  rbac.rs  user_service.rs
src/utils/: banner.rs  macros.rs  mod.rs  tracing.rs
tests/: auth_flow.rs
timoni/: values.cue
timoni/cue.mod/: module.cue
timoni/templates/: config.cue  configmap.cue  deployment.cue  secret.cue  service.cue  surrealdb.cue
