[workspace]
members = ["."]

[workspace.package]
edition = "2021"
version = "0.1.0"
publish = false

[package]
name = "merk"
edition.workspace = true
version.workspace = true
publish.workspace = true

[workspace.dependencies]
# Web Framework
axum = { version = "0.8" }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace"] }

# Async / Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# GraphQL
async-graphql = { version = "7" }
async-graphql-axum = { version = "7" }

# OpenAPI & Documentations
aide = { version = "0.15", features = [
    "axum",
    "macros",
    "scalar",
    "axum-json",
] }
schemars = { version = "0.9" }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Database
surrealdb = { version = "3", features = [
    "kv-mem",
    "protocol-ws",
    "rustls",
    "http",
    "protocol-http",
] }

# Monitoring
metrics = { version = "0.24" }
metrics-exporter-prometheus = { version = "0.16" }

# Error Handling
thiserror = { version = "2" }
envy = { version = "0.4" }
dotenvy = { version = "0.15" }
rcgen = { version = "0.13" }

# Logging / Tracing
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Auth & Security
argon2 = { version = "0.5" }
jsonwebtoken = { version = "9.3" }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rust-embed = { version = "8.5" }

[dependencies]
# Workspace
axum.workspace = true
axum-server.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
aide.workspace = true
schemars.workspace = true
validator.workspace = true
surrealdb.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
thiserror.workspace = true
envy.workspace = true
dotenvy.workspace = true
rcgen.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
rust-embed.workspace = true

[dev-dependencies]
rstest = { version = "0.23" }
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "query_layer_bench"
harness = false
