[workspace]
members = [".", "merk-migrations"]

[workspace.package]
edition = "2024"
version = "0.0.0"
publish = false

[package]
name = "merk"
edition.workspace = true
version.workspace = true
publish.workspace = true

[workspace.dependencies]
# Web Framework
axum = { version = "0.8" }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Async / Runtime
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3" }
async-trait = { version = "0.1" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# GraphQL
async-graphql = { version = "7", features = ["log", "tracing", "opentelemetry"] }
async-graphql-axum = { version = "7" }

# OpenAPI & Documentations
aide = { version = "0.15", features = [
    "axum",
    "macros",
    "scalar",
    "axum-json",
    "axum-query",
] }
schemars = { version = "0.9" }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Database
surrealdb = { version = "3", features = [
    "kv-mem",
    "protocol-ws",
    "rustls",
    "http",
    "protocol-http",
] }

# Monitoring
metrics = { version = "0.24" }
metrics-exporter-prometheus = { version = "0.16" }

# OpenTelemetry
opentelemetry = { version = "0.27" }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.27" }
tracing-opentelemetry = { version = "0.28" }

# Error Handling
thiserror = { version = "2" }
envy = { version = "0.4" }
dotenvy = { version = "0.15" }
rcgen = { version = "0.13" }

# Logging / Tracing
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Auth & Security
argon2 = { version = "0.5" }
jsonwebtoken = { version = "9.3" }

# CLI
clap = { version = "=4.5.37", features = ["derive", "env"] }
anyhow = { version = "1" }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rust-embed = { version = "8.5" }

# Internal crates
merk-migrations = { path = "merk-migrations" }

[dependencies]
# Workspace
axum.workspace = true
axum-server.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
futures-util.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
aide.workspace = true
schemars.workspace = true
validator.workspace = true
surrealdb.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing-opentelemetry.workspace = true
thiserror.workspace = true
anyhow.workspace = true
envy.workspace = true
dotenvy.workspace = true
rcgen.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
rust-embed.workspace = true
merk-migrations.workspace = true

[dev-dependencies]
rstest = { version = "0.23" }
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "query_layer_bench"
harness = false
