[workspace]
members = ["."]

[workspace.package]
edition = "2024"
license = "CC0-1.0"
publish = false
repository = "https://github.com/Musanif-E-Rekhta/merk"
version = "0.0.0"

[workspace.dependencies]
aide = { version = "0.15", features = ["axum", "axum-json", "axum-query", "macros", "scalar"] }
anyhow = { version = "1" }
async-graphql = { version = "7", features = ["chrono", "log", "opentelemetry", "tracing"] }
async-graphql-axum = { version = "7" }
async-trait = { version = "0.1" }
axum = { version = "0.8" }
axum-server = { version = "0.8", features = ["tls-rustls"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "=4.5.37", features = ["derive", "env"] }
dotenvy = { version = "0.15" }
envy = { version = "0.4" }
futures-util = { version = "0.3" }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls", "tracing"] }
lopdf = { version = "0.34" }
merk-auth = { path = "../merk-auth", features = ["aide"] }
merk-axum-middleware = { path = "../merk-axum-middleware" }
merk-blob-store = { path = "../merk-blob-store" }
merk-crawl = { path = "../merk-crawl", features = ["rekhta"] }
merk-events = { path = "../merk-events" }
merk-ingest = { path = "../merk-ingest" }
merk-migrations = { path = "../merk-migrations" }
merk-observability = { path = "../merk-observability" }
merk-rbac = { path = "../merk-rbac" }
merk-totp = { path = "../merk-totp" }
musanif-contracts = { path = "../musanif-contracts" }
opentelemetry = { version = "0.27" }
phf = { version = "0.11" }
phf_codegen = { version = "0.11" }
rand = { version = "0.8" }
rcgen = { version = "0.13" }
rstest = { version = "0.23" }
schemars = { version = "0.9" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sha2 = { version = "0.10" }
surrealdb = { version = "3", features = ["http", "kv-mem", "protocol-http", "protocol-ws", "rustls"] }
thiserror = { version = "2" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = { version = "0.1" }
validator = { version = "0.18", features = ["derive"] }

[package]
build = "build.rs"
edition.workspace = true
license.workspace = true
name = "merk"
publish.workspace = true
repository.workspace = true
version.workspace = true

[build-dependencies]
phf_codegen.workspace = true

[dependencies]
aide.workspace = true
anyhow.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-server.workspace = true
chrono.workspace = true
dotenvy.workspace = true
envy.workspace = true
futures-util.workspace = true
lettre.workspace = true
lopdf.workspace = true
merk-auth.workspace = true
merk-axum-middleware.workspace = true
merk-blob-store.workspace = true
merk-crawl.workspace = true
merk-events.workspace = true
merk-ingest.workspace = true
merk-migrations.workspace = true
merk-observability.workspace = true
merk-rbac.workspace = true
merk-totp.workspace = true
musanif-contracts.workspace = true
opentelemetry.workspace = true
phf.workspace = true
rand.workspace = true
rcgen.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
surrealdb.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
validator.workspace = true

[dev-dependencies]
rstest.workspace = true
