[package]
name = "merk-migrations"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
rust-embed.workspace = true
surrealdb.workspace = true
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:tokio", "dep:dotenvy", "dep:tracing-subscriber", "dep:anyhow"]

[dependencies.clap]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
optional = true

[dependencies.dotenvy]
workspace = true
optional = true

[dependencies.tracing-subscriber]
workspace = true
optional = true

[dependencies.anyhow]
workspace = true
optional = true
